Fixed word-break on links titles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -468,7 +468,6 @@
 					line-height: 1.3em;
 					min-height: 1.3em;
 					max-height: 3.9em;
-					word-break: break-word;
 					overflow: hidden;
 					z-index: 2;
 				}
